syntax = "proto3";

package lsm;

option go_package = "lsmpb";

message GetRequest {
  string key = 1;
}

message GetResponse {
  bytes value = 1;
}

message SetRequest {
  string key = 1;
  bytes value = 2;
}

message SetResponse {}

service LSM {
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Set(SetRequest) returns (SetResponse) {}
}
